c3/HandlePartner
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:522:12: error: expected expression
*( _OWORD *)&my_partner[240] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:522:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[240] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:523:12: error: expected expression
*( _OWORD *)&my_partner[224] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:523:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[224] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:524:12: error: expected expression
*( _OWORD *)&my_partner[208] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:524:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[208] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:525:12: error: expected expression
*( _OWORD *)&my_partner[192] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:525:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[192] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:526:12: error: expected expression
*( _OWORD *)&my_partner[176] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:526:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[176] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:527:12: error: expected expression
*( _OWORD *)&my_partner[160] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:527:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[160] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:528:12: error: expected expression
*( _OWORD *)&my_partner[144] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:528:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[144] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:529:12: error: expected expression
*( _OWORD *)&my_partner[128] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:529:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[128] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:530:12: error: expected expression
*( _OWORD *)&my_partner[112] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:530:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[112] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:531:12: error: expected expression
*( _OWORD *)&my_partner[96] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:531:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[96] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:532:12: error: expected expression
*( _OWORD *)&my_partner[80] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:532:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[80] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:533:12: error: expected expression
*( _OWORD *)&my_partner[64] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:533:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[64] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:534:12: error: expected expression
*( _OWORD *)&my_partner[48] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:534:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[48] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:535:12: error: expected expression
*( _OWORD *)&my_partner[32] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:535:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[32] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:536:12: error: expected expression
*( _OWORD *)&my_partner[16] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:536:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&my_partner[16] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:537:12: error: expected expression
*( _OWORD *)my_partner = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/partner.c:537:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)my_partner = 0LL; 
   ^
32 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePartner/src/obj/partner.o] Error 1
